src/tests/if_expression/snapshots/monkey_interpreter__tests__if_expression__test_if_expression_case_8_environment.snap
---
source: src/tests/if_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {},
            enclosing: None,
        },
    },
}
