src/tests/if_expression/snapshots/monkey_interpreter__tests__if_expression__test_if_expression_case_9_syntax_analysis.snap
---
source: src/tests/if_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: If {
            condition: Boolean {
                literal: false,
            },
            consequence: Block {
                nodes: [
                    Expression {
                        expression: Integer {
                            literal: 85,
                        },
                    },
                ],
            },
            alternative: Some(
                Block {
                    nodes: [
                        Expression {
                            expression: Integer {
                                literal: 58,
                            },
                        },
                    ],
                },
            ),
        },
    },
]
